-- V1__lookup_tables.sql
-- Every enum-like value in the schema is a lookup table, not a native enum type or a
-- free-text CHECK constraint. This keeps adding a new value a plain INSERT (no migration,
-- no app redeploy) and lets these tables be joined/labelled/reordered like any other data.
--
-- These tables are all small, fixed-vocabulary sets (a handful of rows, rarely more than a
-- few dozen even as the product grows) — smallint identity PKs, not uuid. uuid earns its
-- keep on tables with unpredictable growth and multi-writer generation (users, courses,
-- quiz_attempt_items); it's pure overhead here; a 2-byte smallint join key is cheaper to
-- store and faster to index than a 16-byte uuid, and there's no distributed-generation
-- reason to need uuid's collision-free properties on a table an admin edits by hand.
--
-- Seed rows get explicit ids (1, 2, 3...) rather than relying on insertion order, so
-- application code and later migrations (e.g. the partial index in V7) can reference a
-- known constant safely. GENERATED BY DEFAULT allows explicit inserts while still
-- auto-generating when no id is provided.

CREATE TABLE oauth_providers (
    oauth_provider_id   smallint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    provider_code       varchar(50) NOT NULL UNIQUE
);
INSERT INTO oauth_providers (oauth_provider_id, provider_code) VALUES (1, 'google'), (2, 'microsoft');

CREATE TABLE course_visibilities (
    course_visibility_id   smallint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    visibility_code        varchar(50) NOT NULL UNIQUE
);
INSERT INTO course_visibilities (course_visibility_id, visibility_code) VALUES (1, 'private'), (2, 'community');

CREATE TABLE question_formats (
    question_format_id   smallint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    format_code          varchar(50) NOT NULL UNIQUE
);
INSERT INTO question_formats (question_format_id, format_code) VALUES
    (1, 'mcq'), (2, 'true_false'), (3, 'short_answer');

CREATE TABLE enrollment_statuses (
    enrollment_status_id   smallint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    status_code            varchar(50) NOT NULL UNIQUE
);
INSERT INTO enrollment_statuses (enrollment_status_id, status_code) VALUES
    (1, 'active'), (2, 'completed'), (3, 'withdrawn');

CREATE TABLE quiz_attempt_statuses (
    quiz_attempt_status_id   smallint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    status_code              varchar(50) NOT NULL UNIQUE
);
INSERT INTO quiz_attempt_statuses (quiz_attempt_status_id, status_code) VALUES
    (1, 'generated'), (2, 'in_progress'), (3, 'completed'), (4, 'abandoned');

CREATE TABLE intervention_trigger_types (
    intervention_trigger_type_id   smallint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    trigger_code                   varchar(50) NOT NULL UNIQUE
);
INSERT INTO intervention_trigger_types (intervention_trigger_type_id, trigger_code) VALUES
    (1, 'rating_stall'), (2, 'rating_drop'), (3, 'inactivity');

CREATE TABLE intervention_flag_statuses (
    intervention_flag_status_id   smallint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    status_code                   varchar(50) NOT NULL UNIQUE
);
INSERT INTO intervention_flag_statuses (intervention_flag_status_id, status_code) VALUES
    (1, 'open'), (2, 'acknowledged'), (3, 'resolved');

-- bloom_levels and difficulty_levels carry a rank for ordered taxonomy display,
-- separate from the identity PK.
CREATE TABLE bloom_levels (
    bloom_level_id   smallint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    level_name       varchar(50) NOT NULL UNIQUE,
    level_rank       smallint NOT NULL UNIQUE
);
INSERT INTO bloom_levels (level_name, level_rank) VALUES
    ('Remember', 1), ('Understand', 2), ('Apply', 3),
    ('Analyze', 4), ('Evaluate', 5), ('Create', 6);

CREATE TABLE difficulty_levels (
    difficulty_level_id   smallint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    level_name            varchar(50) NOT NULL UNIQUE,
    level_rank            smallint NOT NULL UNIQUE
);
INSERT INTO difficulty_levels (level_name, level_rank) VALUES
    ('Easy', 1), ('Medium', 2), ('Hard', 3), ('Expert', 4);

-- roles/permissions are also small, admin-curated sets — same reasoning applies, even
-- though they're business config rather than pure enums.
CREATE TABLE roles (
    role_id          smallint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    role_name        varchar(100) NOT NULL UNIQUE,
    role_description text
);

CREATE TABLE permissions (
    permission_id          smallint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    permission_code        varchar(100) NOT NULL UNIQUE,
    permission_description text
);
