-- V2__identity_and_access.sql
-- organizations/users stay uuid (unpredictable growth, generated by the app, not hand-
-- curated); roles/permissions were created in V1 alongside the other lookup tables.

CREATE EXTENSION IF NOT EXISTS pgcrypto;

CREATE TABLE organizations (
    id         uuid PRIMARY KEY DEFAULT gen_random_uuid(),
    name       varchar(255) NOT NULL,
    slug       varchar(255) NOT NULL UNIQUE,
    created_at timestamptz NOT NULL DEFAULT now()
);

CREATE TABLE users (
    id                uuid PRIMARY KEY DEFAULT gen_random_uuid(),
    organization_id   uuid NOT NULL REFERENCES organizations(id),
    email             varchar(320) NOT NULL UNIQUE,
    oauth_provider_id smallint NOT NULL REFERENCES oauth_providers(oauth_provider_id),
    oauth_id          varchar(255) NOT NULL,
    full_name         varchar(255),
    created_at        timestamptz NOT NULL DEFAULT now(),
    UNIQUE (oauth_provider_id, oauth_id)
);
CREATE INDEX idx_users_organization_id ON users(organization_id);

INSERT INTO roles (role_name, role_description) VALUES
    ('learner',        'Can enrol in and take courses'),
    ('instructor',     'Can author and manage questions/courses within their organisation'),
    ('org_admin',      'Can manage members, roles, and course publishing for their organisation'),
    ('platform_admin', 'Full platform administration');

INSERT INTO permissions (permission_code, permission_description) VALUES
    ('course.create',    'Create a new course'),
    ('course.publish',   'Publish a course to the community'),
    ('user.invite',      'Invite a user into the organisation'),
    ('analytics.view',   'View organisation-level analytics and dashboards'),
    ('intervention.act', 'Acknowledge or resolve intervention flags');

CREATE TABLE user_roles (
    user_id    uuid NOT NULL REFERENCES users(id),
    role_id    smallint NOT NULL REFERENCES roles(role_id),
    granted_at timestamptz NOT NULL DEFAULT now(),
    PRIMARY KEY (user_id, role_id)
);
CREATE INDEX idx_user_roles_role_id ON user_roles(role_id);

CREATE TABLE role_permissions (
    role_id       smallint NOT NULL REFERENCES roles(role_id),
    permission_id smallint NOT NULL REFERENCES permissions(permission_id),
    PRIMARY KEY (role_id, permission_id)
);
CREATE INDEX idx_role_permissions_permission_id ON role_permissions(permission_id);

-- Starter mapping: org_admin and platform_admin get every seeded permission;
-- instructor can author/publish; learner gets nothing beyond default access.
INSERT INTO role_permissions (role_id, permission_id)
SELECT r.role_id, p.permission_id FROM roles r, permissions p WHERE r.role_name = 'platform_admin';

INSERT INTO role_permissions (role_id, permission_id)
SELECT r.role_id, p.permission_id FROM roles r, permissions p WHERE r.role_name = 'org_admin';

INSERT INTO role_permissions (role_id, permission_id)
SELECT r.role_id, p.permission_id FROM roles r, permissions p
WHERE r.role_name = 'instructor' AND p.permission_code IN ('course.create', 'course.publish');
