// Elovate — paste this directly into https://dbdiagram.io

Table organizations {
  id uuid [pk]
  name varchar
  slug varchar [unique]
  created_at timestamptz
}

Table oauth_providers {
  id smallint [pk]
  code varchar [unique, note: "google, microsoft, etc."]
}

Table users {
  id uuid [pk]
  organization_id uuid [ref: > organizations.id]
  email varchar [unique]
  oauth_provider_id smallint [ref: > oauth_providers.id]
  oauth_id varchar [note: "subject id issued by the provider"]
  full_name varchar
  created_at timestamptz

  indexes {
    (oauth_provider_id, oauth_id) [unique]
  }
}

Table roles {
  id smallint [pk]
  name varchar [unique]
  description varchar
}

Table permissions {
  id smallint [pk]
  code varchar [unique]
  description varchar
}

Table user_roles {
  user_id uuid [ref: > users.id]
  role_id smallint [ref: > roles.id]
  granted_at timestamptz

  indexes {
    (user_id, role_id) [pk]
  }
}

Table role_permissions {
  role_id smallint [ref: > roles.id]
  permission_id smallint [ref: > permissions.id]

  indexes {
    (role_id, permission_id) [pk]
  }
}

Table course_visibilities {
  id smallint [pk]
  code varchar [unique, note: "private, community"]
}

Table courses {
  id uuid [pk]
  owning_organization_id uuid [ref: > organizations.id]
  title varchar
  description text
  visibility_id smallint [ref: > course_visibilities.id]
  created_by uuid [ref: > users.id]
  created_at timestamptz
  updated_at timestamptz
}

Table course_sections {
  id uuid [pk]
  course_id uuid [ref: > courses.id]
  title varchar
  position int
}

Table topics {
  id uuid [pk]
  course_id uuid [ref: > courses.id]
  name varchar
}

Table bloom_levels {
  id smallint [pk]
  name varchar [unique, note: "Remember, Understand, Apply, Analyze, Evaluate, Create"]
  rank int [unique]
}

Table difficulty_levels {
  id smallint [pk]
  name varchar [unique, note: "Easy, Medium, Hard, Expert"]
  rank int [unique]
}

Table question_formats {
  id smallint [pk]
  code varchar [unique, note: "mcq, true_false, short_answer"]
}

Table questions {
  id uuid [pk]
  course_section_id uuid [ref: > course_sections.id]
  format_id smallint [ref: > question_formats.id]
  prompt text
  bloom_level_id smallint [ref: > bloom_levels.id]
  difficulty_level_id smallint [ref: > difficulty_levels.id]
  base_difficulty float [note: "continuous ELO-scale value used by the generator"]
  created_by uuid [ref: > users.id]
  created_at timestamptz
}

Table question_options {
  id uuid [pk]
  question_id uuid [ref: > questions.id]
  option_text varchar
  is_correct boolean
  position int
}

Table question_topics {
  question_id uuid [ref: > questions.id]
  topic_id uuid [ref: > topics.id]

  indexes {
    (question_id, topic_id) [pk]
  }
}

Table org_course_adoptions {
  id uuid [pk]
  organization_id uuid [ref: > organizations.id, note: "the adopting org"]
  course_id uuid [ref: > courses.id]
  adopted_at timestamptz

  indexes {
    (organization_id, course_id) [unique]
  }
}

Table enrollment_statuses {
  id smallint [pk]
  code varchar [unique, note: "active, completed, withdrawn"]
}

Table enrollments {
  id uuid [pk]
  user_id uuid [ref: > users.id]
  course_id uuid [ref: > courses.id]
  enrolled_at timestamptz
  status_id smallint [ref: > enrollment_statuses.id]
}

Table quiz_attempt_statuses {
  id smallint [pk]
  code varchar [unique, note: "generated, in_progress, completed, abandoned"]
}

Table quiz_attempts {
  id uuid [pk]
  user_id uuid [ref: > users.id]
  course_id uuid [ref: > courses.id]
  generated_at timestamptz
  started_at timestamptz
  completed_at timestamptz
  status_id smallint [ref: > quiz_attempt_statuses.id]
  rating_at_generation float
  rating_at_completion float
}

Table quiz_attempt_items {
  id uuid [pk]
  quiz_attempt_id uuid [ref: > quiz_attempts.id]
  question_id uuid [ref: > questions.id]
  selected_option_id uuid [ref: > question_options.id]
  is_correct boolean
  answered_at timestamptz
}

Table quiz_topic_weights {
  quiz_attempt_id uuid [ref: > quiz_attempts.id]
  topic_id uuid [ref: > topics.id]
  target_weight float
  questions_allocated int

  indexes {
    (quiz_attempt_id, topic_id) [pk]
  }
}

Table quiz_difficulty_weights {
  quiz_attempt_id uuid [ref: > quiz_attempts.id]
  difficulty_level_id smallint [ref: > difficulty_levels.id]
  target_weight float
  questions_allocated int

  indexes {
    (quiz_attempt_id, difficulty_level_id) [pk]
  }
}

Table quiz_bloom_weights {
  quiz_attempt_id uuid [ref: > quiz_attempts.id]
  bloom_level_id smallint [ref: > bloom_levels.id]
  target_weight float
  questions_allocated int

  indexes {
    (quiz_attempt_id, bloom_level_id) [pk]
  }
}

Table student_course_profile {
  user_id uuid [ref: > users.id]
  course_id uuid [ref: > courses.id]
  current_rating float
  questions_answered int
  correct_count int
  last_answered_at timestamptz
  updated_at timestamptz

  indexes {
    (user_id, course_id) [pk]
  }
}

Table student_topic_mastery {
  user_id uuid [ref: > users.id]
  course_id uuid [ref: > courses.id]
  topic_id uuid [ref: > topics.id]
  questions_answered int
  correct_count int
  updated_at timestamptz

  indexes {
    (user_id, course_id, topic_id) [pk]
  }
}

Table student_difficulty_mastery {
  user_id uuid [ref: > users.id]
  course_id uuid [ref: > courses.id]
  difficulty_level_id smallint [ref: > difficulty_levels.id]
  questions_answered int
  correct_count int
  updated_at timestamptz

  indexes {
    (user_id, course_id, difficulty_level_id) [pk]
  }
}

Table student_bloom_mastery {
  user_id uuid [ref: > users.id]
  course_id uuid [ref: > courses.id]
  bloom_level_id smallint [ref: > bloom_levels.id]
  questions_answered int
  correct_count int
  updated_at timestamptz

  indexes {
    (user_id, course_id, bloom_level_id) [pk]
  }
}

Table overall_learning_profile {
  user_id uuid [pk, ref: > users.id]
  aggregate_rating float
  total_courses int
  total_questions_answered int
  updated_at timestamptz
}

Table cohorts {
  id uuid [pk]
  organization_id uuid [ref: > organizations.id]
  name varchar
  created_at timestamptz
}

Table cohort_members {
  cohort_id uuid [ref: > cohorts.id]
  user_id uuid [ref: > users.id]

  indexes {
    (cohort_id, user_id) [pk]
  }
}

Table intervention_trigger_types {
  id smallint [pk]
  code varchar [unique, note: "rating_stall, rating_drop, inactivity"]
}

Table intervention_rules {
  id uuid [pk]
  organization_id uuid [ref: > organizations.id]
  name varchar
  trigger_type_id smallint [ref: > intervention_trigger_types.id]
  threshold_value float
  window_size int
  created_at timestamptz
}

Table intervention_flag_statuses {
  id smallint [pk]
  code varchar [unique, note: "open, acknowledged, resolved"]
}

Table intervention_flags {
  id uuid [pk]
  user_id uuid [ref: > users.id]
  course_id uuid [ref: > courses.id]
  rule_id uuid [ref: > intervention_rules.id]
  triggered_at timestamptz
  status_id smallint [ref: > intervention_flag_statuses.id]
  resolved_by uuid [ref: > users.id]
  resolved_at timestamptz
}
